# syscall_benchmark

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  syscall_benchmark.c  syscall_benchmark.m
Results/: clock_gettime.txt  getuid.txt  nothing.txt  time.txt
